update home link

--- a/seattle-sounders-home.html
+++ b/seattle-sounders-home.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-       <a class="navbar-brand" href="/seattle-sounders-home.html"><img src="images/favicon-32x32.png" alt="sounders icon" title="Home"></a>
+       <a class="navbar-brand" href="/6380-midterm/seattle-sounders-home.html"><img src="images/favicon-32x32.png" alt="sounders icon" title="Home"></a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
        <span class="navbar-toggler-icon"></span>
        </button>
